2008-11-08  Philip Withnall  <philip@tecnocode.co.uk>

	* src/main.c:
	* src/main.h: Added a command line parameter to allow a file to be
	opened from the command line.

2008-11-08  Philip Withnall  <philip@tecnocode.co.uk>

	* src/compiler.c:
	* src/compiler.h:
	* src/main-window.c: Clean up error highlighting to be more consistent
	and useful.

2008-11-08  Philip Withnall  <philip@tecnocode.co.uk>

	* src/main-window.c: Ensure the stack is freed when stopping the
	simulation.

2008-11-08  Philip Withnall  <philip@tecnocode.co.uk>

	* data/mcus.ui:
	* src/interface.c: Tidied up the code for using custom widgets a
	little.
	* src/compiler.c:
	* src/instructions.h:
	* src/simulation.c: Changed the compilation and interpretation code to
	treat built-in subroutines as special labels, rather than instructions
	by themselves, so that they can be, and only be, used with RCALL.

2008-11-08  Philip Withnall  <philip@tecnocode.co.uk>

	* .bzrignore: Updated the ignore list.

2008-11-08  Philip Withnall  <philip@tecnocode.co.uk>

	* configure.ac:
	* gnome-doc-utils.make:
	* Makefile.am:
	* packaging/windows.sh:
	* src/main-window.c:
	* help/: Added documentation for Windows and Linux.
	* data/mcus.ui: Added Help menu entry, and a missing label.
	* data/ocr-assembly.lang: Fixed highlighting of comments.
	* src/analogue-input.c: Ensure the analogue input voltage is clamped
	to 0--5V.
	* src/instructions.h: Fix some comments.

2008-11-06  Philip Withnall  <philip@tecnocode.co.uk>

	* packaging/windows.sh: Fixed a problem where the script didn't change
	back to the correct directory after building for Windows.

2008-11-03  Philip Withnall  <philip@tecnocode.co.uk>

	* configure.ac:
	* data/icons/:
	* data/Makefile.am: Added icon and sources, based off the GNOME CPU
	Frequency Scaling Monitor applet icon.
	* src/mcus_win_icon.rc:
	* src/mcus_win_icon_16x16.ico:
	* src/mcus_win_icon_32x32.ico:
	* src/mcus_win_icon_48x48.ico:
	* src/mcus_win_icon_64x64.ico